[tool.poetry]
name = "feast-benchmark-async-sdk"
version = "0.1.0"
description = ""
authors = ["Breno Costa <brenocosta0901@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# feast = {version = "^0.37.1", extras = ["redis"]}
feast = {git = "https://github.com/feast-dev/feast.git", rev = "master",  extras = ["redis"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
